# PirateServer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  Makefile.docker  Makefile.test  README.md  ROADMAP.md  docker-compose.bearer-override.yml  docker-compose.dev-frontend.yml  docker-compose.grpc-client-e2e.yml  docker-compose.nginx-e2e.yml  docker-compose.test.yml
docs/: ARCHITECTURE_SERVER_VS_LOCAL.md  DESKTOP_CLIENT.md  DOCKER_E2E.md  GRPC_AUTH_FUTURE.md  LOCAL_GATEWAY.md  LOCAL_STACK_DESIGN.md  PHASE6.md  README.md
docs/en/: README.md
examples/: pirate copy.toml
local-stack/: README.md
local-stack/client/: Cargo.toml  README.md
local-stack/client/src/: board.rs  board_probe.rs  bootstrap_apply.rs  bundle_inspect.rs  bypass.rs  config.rs  connection_manager.rs  default_rules.rs  display_stream.rs  grpc_transport.rs  gui_probe.rs  http_ping.rs  lib.rs  local_pipeline.rs  local_uninstall.rs  main.rs  metrics_collector.rs  network_access.rs  ops.rs  project_control.rs  project_registry.rs  proxy_test.rs  proxy_trace.rs  routing.rs  routing_rules.rs  settings.rs  stack_update_prompt.rs  tls_profile.rs  upload.rs  version_info.rs
local-stack/client/src/quic/: dataplane.rs  mod.rs
local-stack/client/tests/: deploy_client_ops.rs  local_uninstall_config.rs
local-stack/desktop-client/: Cargo.toml  README.md
local-stack/desktop-client/src/: bookmarks.rs  connection.rs  control_api.rs  deploy.rs  desktop_store.rs  display_stream_prefs.rs  env_paths.rs  host_agent.rs  host_services_compat.rs  host_stats.rs  hosts.rs  internet_proxy.rs  lib.rs  local_dev_stack.rs  main.rs  paas.rs  port.rs  preflight.rs  project_registry.rs  server.rs  server_stack.rs  status.rs  toolchain_probe.rs
local-stack/desktop-client/src/display_ingest/: mod.rs  server.rs
local-stack/desktop-client/src/monitoring/: alerts.rs  collector.rs  history.rs  mod.rs  server.rs  sqlite_store.rs  types.rs
local-stack/desktop-ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
local-stack/desktop-ui/src-tauri/capabilities/: default.json
local-stack/desktop-ui/src-tauri/icons/: icon.icns
local-stack/desktop-ui/src-tauri/src/: main.rs
proto/: Cargo.toml  build.rs  deploy.proto
scripts/: Dockerfile.dist-arm64-install-e2e  bench_http_upstream.py  bootstrap-phase6.sh  build-arm64-linux-bundle.sh  build-desktop-client-dist.sh  build-linux-bundle.sh  dmg-bundle-README.in.txt  docker-dist-arm64-install-e2e-entrypoint.sh  docker-dist-arm64-install-e2e.sh  docker-grpc-preflight.sh  e2e-docker-host-smoke.sh  e2e-docker.sh  e2e-host-grpc.sh  fake-systemctl-install-docker.sh  grpc-client-docker-e2e.sh  ingress-manager-run.sh  install-bare-metal-binaries.sh  linux-bundle-build-rust-in-docker.sh  linux-bundle-build.sh  linux-bundle-rust-docker-entry.sh  local-e2e.sh  macos-bundle-build.sh  os-bootstrap-install.sh  paas-smoke.sh  pirate-server-stack-update.sh  print-docker-connection.sh  protocol-abuse-docker.sh  protocol-bench-docker.sh  protocol-fuzz-docker.sh  protocol-load-docker.sh  protocol-soak-docker.sh  proxy-connect-docker-e2e.sh  read-version.sh  redis-tunnel-docker-tests-inner.sh  routing-e2e-docker.sh  run-docker-anti-ddos.sh  run-docker-e2e-bearer.sh  run-docker-e2e-nginx.sh  run-docker-e2e.sh  run-protocol-abuse.sh  (+18 more)
server-stack/: README.md
server-stack/control-api/: Cargo.toml  README.md
server-stack/control-api/src/: antiddos_api.rs  auth.rs  cors.rs  data_sources_api.rs  error.rs  host_terminal.rs  main.rs  proxy_sessions_api.rs  proxy_tunnel_redis.rs
server-stack/deploy-auth/: Cargo.toml  README.md
server-stack/deploy-auth/src/: lib.rs  nonce.rs  peers.rs
server-stack/deploy-control/: Cargo.toml  README.md
server-stack/deploy-control/src/: antiddos.rs  grpc_artifact_upload.rs  host_services.rs  host_stats.rs  host_stats_detail.rs  host_stats_history.rs  lib.rs  nginx.rs  service.rs  types.rs
server-stack/deploy-core/: Cargo.toml  README.md
server-stack/deploy-core/src/: display_stream.rs  host_service_requirements.rs  lib.rs  nginx_snippet.rs  pirate_project.rs  process_manager.rs  sandbox.rs
server-stack/deploy-db/: Cargo.toml  README.md
server-stack/deploy-db/migrations/: 20260109120000_init.sql  20260410120000_multi_project.sql  20260411120000_dashboard_users.sql  20260412180000_data_sources.sql  20260413120000_data_sources_kinds.sql  20260414120000_data_sources_postgresql_kind.sql  20260415120000_grpc_session_events.sql  20260416120000_connection_peer_extensions.sql  20260420120000_grpc_proxy_session.sql  20260421120000_grpc_proxy_session_wire.sql  20260422120000_grpc_proxy_session_ingress.sql  20260423120000_grpc_proxy_session_subscription_token.sql  20260424120000_peer_display_topology.sql
server-stack/deploy-db/migrations_sqlite/: 20260101000000_init.sql  20260415120000_grpc_session_events.sql  20260416120000_connection_peer_extensions.sql  20260420120000_grpc_proxy_session.sql  20260421120000_grpc_proxy_session_wire.sql  20260422120000_grpc_proxy_session_ingress.sql  20260423120000_grpc_proxy_session_subscription_token.sql  20260424120000_peer_display_topology.sql
server-stack/deploy-db/src/: data_sources.rs  explorer.rs  lib.rs
server-stack/host-agent/: Cargo.toml  README.md
server-stack/host-agent/src/: lib.rs  main.rs
server-stack/ingress-config/: Cargo.toml  README.md
server-stack/ingress-config/src/: lib.rs  main.rs
server-stack/server/: Cargo.toml  README.md
server-stack/server/src/: admin_seed.rs  auth.rs  benchmark.rs  deploy_service.rs  listen_port_owner.rs  main.rs  metrics_http.rs  proxy_session.rs  session_audit.rs  tunnel_admission.rs  tunnel_flush.rs  tunnel_registry.rs  wire_relay.rs
server-stack/server/src/quic/: context.rs  mod.rs  relay.rs  server.rs  ticket.rs
server-stack/server/tests/: allow_stack_update_env.rs
server-stack/tunnel-gateway/: Cargo.toml  README.md
server-stack/tunnel-gateway/src/: main.rs
wire-protocol/: Cargo.toml
wire-protocol/src/: client.rs  lib.rs  params.rs  quic_dataplane.rs  shadowsocks.rs  socks5.rs  trojan.rs  uri.rs  vless.rs  vmess.rs
wire-protocol/tests/: smoke.rs
(+228 files in other folders)
