[workspace]
resolver = "2"
members = [
    "proto",
    "wire-protocol",
    "server-stack/ingress-config",
    "server-stack/xray-export",
    "server-stack/server",
    "server-stack/control-api",
    "server-stack/deploy-control",
    "server-stack/deploy-db",
    "server-stack/deploy-core",
    "server-stack/deploy-auth",
    "server-stack/tunnel-gateway",
    "server-stack/host-agent",
    "local-stack/client",
    "local-stack/local-agent",
    "local-stack/desktop-client",
    "local-stack/desktop-ui/src-tauri",
    "server-stack/desktop-ui/src-tauri",
]
