[package]
name = "deploy-client"
version = "0.1.0"
edition = "2021"
autobins = false

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
deploy-proto = { path = "../../proto" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.12", features = ["transport"] }
clap = { version = "4", features = ["derive"] }
tar = "0.4"
flate2 = "1"
sha2 = "0.10"
hex = "0.4"
futures-util = "0.3"
