[package]
name = "deploy-client"
version = "0.1.1"
edition = "2021"
autobins = false

[lib]
name = "deploy_client"
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/main.rs"

[[bin]]
name = "pirate"
path = "src/main.rs"

[dependencies]
deploy-auth = { path = "../../server-stack/deploy-auth" }
deploy-core = { path = "../../server-stack/deploy-core" }
deploy-proto = { path = "../../proto" }
ed25519-dalek = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util"] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["transport"] }
clap = { version = "4", features = ["derive"] }
tar = "0.4"
flate2 = "1"
sha2 = "0.10"
hex = "0.4"
futures-util = "0.3"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand_core = { version = "0.6", features = ["getrandom"] }
