[package]
name = "deploy-client"
version = "0.1.4"
edition = "2021"
autobins = false

[lib]
name = "deploy_client"
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/main.rs"

[[bin]]
name = "pirate"
path = "src/main.rs"

[[bin]]
name = "grpc-security-probe"
path = "src/bin/grpc_security_probe.rs"

[features]
default = []
experimental-quic = []

[dependencies]
deploy-auth = { path = "../../server-stack/deploy-auth" }
deploy-core = { path = "../../server-stack/deploy-core" }
deploy-proto = { path = "../../proto" }
wire-protocol = { path = "../../wire-protocol" }
prost = "0.13"
ed25519-dalek = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util"] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["transport", "tls", "tls-webpki-roots", "tls-native-roots"] }
clap = { version = "4", features = ["derive"] }
tar = "0.4"
flate2 = "1"
sha2 = "0.10"
hex = "0.4"
futures-util = "0.3"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
rand_core = { version = "0.6", features = ["getrandom"] }
rand = "0.8"
rpassword = "7"
sysinfo = "0.32"
ipnet = "2"
notify = "6"
once_cell = "1"
parking_lot = "0.12"
xcap = "0.0.11"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pki-types = "1"
webpki-roots = "0.26"
