[package]
name = "pirate-desktop"
version = "0.1.0"
edition = "2021"
description = "Pirate Client desktop shared library (Tauri backend helpers)"
autobins = false

[lib]
name = "pirate_desktop"
path = "src/lib.rs"

[dependencies]
deploy-client = { path = "../client" }
deploy-auth = { path = "../../server-stack/deploy-auth" }
deploy-core = { path = "../../server-stack/deploy-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
deploy-proto = { path = "../../proto" }
ed25519-dalek = "2"
rand_core = { version = "0.6", features = ["getrandom"] }
tonic = { version = "0.12", features = ["transport"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
