[package]
name = "control-api"
version = "0.1.4"
edition = "2021"
description = "HTTP API for deploy dashboard (REST + optional PostgreSQL)"

[dependencies]
axum = { version = "0.7", features = ["ws", "multipart"] }
async-stream = "0.3"
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
deploy-db = { path = "../deploy-db" }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
deploy-core = { path = "../deploy-core" }
deploy-auth = { path = "../deploy-auth" }
deploy-control = { path = "../deploy-control" }
xray-export = { path = "../xray-export" }
deploy-proto = { path = "../../proto" }
ed25519-dalek = "2"
tonic = { version = "0.12", features = ["transport"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
argon2 = "0.5"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
redis = { version = "0.27", features = ["tokio-comp"] }
sha2 = "0.10"

[target.'cfg(unix)'.dependencies]
portable-pty = "0.8"
libc = "0.2"
