[package]
name = "deploy-control"
version = "0.1.0"
edition = "2021"
description = "Control-plane logic for deploy dashboard (gRPC status, releases, nginx)"

[dependencies]
deploy-core = { path = "../deploy-core" }
deploy-db = { path = "../deploy-db" }
deploy-auth = { path = "../deploy-auth" }
deploy-proto = { path = "../../proto" }
ed25519-dalek = "2"
tonic = { version = "0.12", features = ["transport"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["fs", "rt", "process"] }
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
