[package]
name = "deploy-core"
version = "0.1.3"
edition = "2021"
description = "Shared paths and filesystem helpers for deploy-server and control-api"

[dependencies]
tokio = { version = "1", features = ["process", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
base64 = "0.22"
