[package]
name = "deploy-db"
version = "0.1.0"
edition = "2021"
description = "PostgreSQL persistence for deploy events and snapshot (audit/UI)"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "chrono"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
