[package]
name = "deploy-db"
version = "0.1.1"
edition = "2021"
description = "Deploy metadata (PostgreSQL or SQLite) and optional PostgreSQL explorer helpers"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite", "migrate", "chrono", "json", "uuid"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
