[package]
name = "pirate-host-agent"
version = "0.1.0"
edition = "2021"
description = "Out-of-band HTTP agent for server-stack OTA and host reboot"

[[bin]]
name = "pirate-host-agent"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "process", "signal", "net", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
hex = "0.4"
flate2 = "1"
tar = "0.4"
deploy-core = { path = "../deploy-core" }
subtle = "2"
axum-server = { version = "0.8", features = ["tls-rustls"] }
