[package]
name = "ingress-config"
version = "0.1.0"
edition = "2021"
description = "Sing-box JSON generation from grpc_proxy_session ingress fields"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
deploy-db = { path = "../deploy-db" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "ingress-manager"
path = "src/main.rs"
