[package]
name = "deploy-server"
version = "0.1.4"
edition = "2021"

[dependencies]
deploy-auth = { path = "../deploy-auth" }
ed25519-dalek = "2"
parking_lot = "0.12"
deploy-core = { path = "../deploy-core" }
deploy-control = { path = "../deploy-control" }
deploy-db = { path = "../deploy-db" }
deploy-proto = { path = "../../proto" }
wire-protocol = { path = "../../wire-protocol" }
prost = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "process", "sync", "net", "time"] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["transport"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
hex = "0.4"
futures-util = "0.3"
libc = "0.2"
argon2 = "0.5"
password-hash = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock"] }
chrono-tz = "0.9"
sysinfo = "0.32"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
redis = { version = "0.27", features = ["tokio-comp"] }
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pki-types = "1"
rcgen = "0.13"
rustls-pemfile = "2"
